<resources>
    <string name="app_name">mytenses</string>
    <string name="cari">Cari</string>
    <string name="daftar">Daftar</string>
    <string name="already_have_account">Sudah punya akun? Masuk disini</string>
    <string name="masukLowercase">Masuk</string>
    <string name="masukUppercase">MASUK</string>
    <string name="dont_have_account">Belum memiliki akun? Daftar disini</string>
    <string name="login_here">Masuk Disini</string>
    <string name="welcome_message">Selamat Datang, %s</string>
    <string name="lanjut_belajar">Lanjut Belajar</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ringkasan_simple_present">Simple present tense adalah bentuk waktu dalam bahasa Inggris yang digunakan untuk menyatakan fakta, kebiasaan, atau kejadian yang terjadi secara rutin. Tense ini biasanya menggunakan bentuk dasar kata kerja (verb 1) dan ditambahkan akhiran -s atau -es jika subjeknya adalah orang ketiga tunggal (he, she, it). Contoh penggunaannya adalah kalimat seperti She drinks coffee every morning atau They play football on Sundays. Simple present juga digunakan untuk menyatakan kebenaran umum seperti The sun rises in the east.</string>
    <string name="simple">Simple</string>
    <string name="continuous">Continuous</string>
    <string name="perfect">Perfect</string>
    <string name="present">Present</string>
    <string name="perfect_continuous">Perfect Continuous</string>
    <string name="past">Past</string>
    <string name="future">Future</string>
    <string name="present_perfect">Present Perfect</string>
    <string name="past_perfect">Past Perfect</string>
    <string name="congrats_message">Selamat %s</string>
    <string name="congrats_message_complete">Selamat Kamu Sudah Menyelesaikan %s </string>
    <string name="profil">Profil</string>

</resources>